# tsorb

./: .gitignore  pyproject.toml
.github/workflows/: test.yml
tsorb/: Appliance.py  ElectricalLoadProfile.py  LoadModel.py
