[project]
name = "tsorb"
version = "0.0.3"
description = "Time Series of Occupants in Residential Buildings"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "Forschungszentrum Juelich GmbH", email = "l.kotzur@fz-juelich.de" },
]
requires-python = ">=3.12"
keywords = [
    "residential buildings",
    "electricity load",
    "occupancy behavior",
    "markov chain",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas",
    "numpy",
]

[project.optional-dependencies]
examples = ["matplotlib"]

[project.urls]
Homepage = "https://github.com/FZJ-IEK3-VSA/tsorb"

[dependency-groups]
dev = ["pytest", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tsorb"]
